Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-55014

Linux: Qt 5/dev branch (5.8): build warnings "QFSFileEngine::open: No file name specified" by moc for QtPlatformSupport

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • None
    • 5.8.0 Alpha
    • None

    Description

      Warning occurs in qtbase/dev at 7f77dc84fb434f33ffe96f6633792706b80fb0a3 when running sth like

      ../qtbase/bin/moc -DQT_NO_TSLIB -DQT_NO_CAST_FROM_ASCII -DMESA_EGL_NO_X11_HEADERS -DQT_LIBINPUT_VERSION_MAJOR=1 -DQT_LIBINPUT_VERSION_MINOR=2 -DQT_BUILD_PLATFORMSUPPORT_LIB -DQT_BUILDING_QT -DQT_NO_CAST_TO_ASCII -DQT_ASCII_CAST_WARNINGS -DQT_MOC_COMPAT -DQT_USE_QSTRINGBUILDER -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_BEFORE=0x050000 -DQ_FONTCONFIGDATABASE -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_GUI_LIB -DQT_DBUS_LIB -DQT_CORE_LIB --include .moc/moc_predefs.h -I../qtbase/mkspecs/linux-g++ -I../qtbase/src/platformsupport -I/usr/include/freetype2 -I../qtbase/src/platformsupport/accessibility -I../qtbase/src/3rdparty/atspi2 -I../qtbase/src/platformsupport/linuxaccessibility -I../qtbase/src/platformsupport/dbusmenu -I../qtbase/src/gui/kernel -I../qtbase/src/platformsupport/dbustray -I../qtbase/src/gui/kernel -I../qtbase/include -I../qtbase/include/QtPlatformSupport -I../qtbase/include/QtPlatformSupport/5.8.0 -I../qtbase/include/QtPlatformSupport/5.8.0/QtPlatformSupport -I/usr/include/libdrm -I../qtbase/include/QtGui/5.8.0 -I../qtbase/include/QtGui/5.8.0/QtGui -I../qtbase/include/QtCore/5.8.0 -I../qtbase/include/QtCore/5.8.0/QtCore -I../qtbase/include/QtGui -I../qtbase/include/QtDBus -I../qtbase/include/QtCore -I/usr/include/c++/5 -I/usr/include/x86_64-linux-gnu/c++/5 -I/usr/include/c++/5/backward -I/usr/lib/gcc/x86_64-linux-gnu/5/include -I/usr/local/include -I/usr/lib/gcc/x86_64-linux-gnu/5/include-fixed -I/usr/include/x86_64-linux-gnu -I/usr/include cache_adaptor.h -o .moc/moc_cache_adaptor.cpp
      

      https://codereview.qt-project.org/#/c/166381/ adding warnings to moc produces:

      Warning: Failed to resolve include ".moc/moc_predefs.h" for moc file deviceeventcontroller_adaptor.h
      Warning: Failed to resolve include ".moc/moc_predefs.h" for moc file cache_adaptor.h
      Warning: Failed to resolve include ".moc/moc_predefs.h" for moc file socket_interface.h
      Warning: Failed to resolve include ".moc/moc_predefs.h" for moc file bus_interface.h
      

      apparently originating from qtbase/src/3rdparty/atspi2

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              frederik Frederik Gladhorn
              kleint Friedemann Kleint
              Votes:
              2 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes